# comacode

./: .gitignore  Cargo.toml  README.md  answers.md  cargo-config.toml  dev-test.sh  idea.md  repomix-output.xml
.github/workflows/: build-windows.yml
crates/cli_client/: Cargo.toml
crates/cli_client/src/: main.rs  message_reader.rs  raw_mode.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  error.rs  error.rs.bak  lib.rs  streaming.rs
crates/core/src/protocol/: codec.rs  mod.rs
crates/core/src/terminal/: mod.rs  traits.rs  traits.rs.bak
crates/core/src/transport/: heartbeat.rs  mod.rs  reconnect.rs  stream.rs
crates/core/src/types/: command.rs  event.rs  message.rs  mod.rs  qr.rs
crates/hostagent/: Cargo.toml
crates/hostagent/examples/: test_qr.rs
crates/hostagent/src/: auth.rs  cert.rs  main.rs  pty.rs  quic_server.rs  ratelimit.rs  session.rs  snapshot.rs  vfs.rs  vfs_watcher.rs  web_ui.rs
crates/mobile_bridge/: Cargo.toml
crates/mobile_bridge/src/: api.rs  bridge.rs  frb_generated.rs  lib.rs  quic_client.rs
docs/: ONBOARDING.md  code-standards.md  codebase-summary.md  design-guidelines.md  dogfooding-guide.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md  tech-stack.md
docs/wireframes/: 01-splash.html  02-discovery.html  03-connection.html  04-terminal.html  05-settings.html
mobile/: README.md  bridge_generated.frb.lsp.yaml  frb_config.yaml  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/: Podfile
mobile/ios/Frameworks/: mobile_bridge.podspec
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/bridge/: api.dart  api.freezed.dart  bridge_wrapper.dart  bridge_wrapper.g.dart  ffi_helpers.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
mobile/lib/core/: storage.dart  theme.dart
mobile/lib/models/: dir_entry.dart
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/plans/reports/: code-reviewer-260107-0742-host-agent-phase03.md  code-reviewer-260107-0748-phase03-re-review.md  code-reviewer-260107-2109-phase06-flutter-ui.md  (+6 more)
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
plans/260106-2127-comacode-mvp/: known-issues-technical-debt.md  phase-01-project-setup.md  phase-02-rust-core.md  phase-03-host-agent.md  phase-04-mobile-app.md  phase-05-network-protocol.md  phase-06-discovery-auth.md  phase-06-flutter-ui.md  phase-07-discovery-auth.md  phase-07-testing-deploy.md  phase-08-production-hardening.md  plan.md
plans/260107-0858-brainstorm-implementation/: phase-01-core-enhancements.md  phase-02-output-streaming.md  phase-03-security-hardening.md  phase-04-cert-persistence.md  phase-05-macos-build.md  phase-06-windows-cross.md  plan.md
plans/260107-1553-solve-quinn-quic-client/: plan.md
plans/260107-1648-fix-critical-ub-fingerprint-leak/: plan.md
plans/260108-0746-level2-web-dashboard/: plan.md
plans/260108-0907-phase-051-terminal-integration/: plan.md
plans/260108-1006-fix-cli-and-frb/: plan.md
plans/260108-1143-cli-raw-mode-tui/: plan.md
plans/260108-1406-raw-mode-space-key/: debug-space-key.sh
plans/260108-cli-pure-passthrough-fix/: plan.md
plans/260109-0109-ssh-like-terminal-refactor/: phase-00-clean-slate.md  phase-01-protocol-framing.md  phase-02-client-cleanup.md  phase-03-server-cleanup.md  phase-04-pty-pump.md  plan.md
plans/260122-1008-vfs-browser/: phase-01-directory-listing-api.md  phase-02-flutter-file-browser-ui.md  phase-03-file-watcher.md  plan.md
plans/reports/: Explore-260109-0110-quic-server-analysis.md  analysis-260108-cli-raw-mode-issues.md  analysis-260109-0030-zsh-prompt-timing-unresolved.md  brainstorm-260108-cli-tui-raw-mode.md  brainstorm-decisions-260107-0827.md  brainstorm-decisions-e04-qr-fixes.md  brainstorm-e05-260107-1106-revised-plan.md  brainstorm-e05-260107-1118-cli-client-fixes.md  brainstorming-260107-1444-issue-tracking.md  brainstorming-260107-1450-phase04-mobile-revised.md  brainstorming-260107-2014-phase06-flutter-architecture-fixes.md  brainstorming-260107-auth-fix-vi.md  brainstorming-260107-phase-e06-windows-ci-vi.md  brainstorming-260107-phase05-network-review-vi.md  code-reviewer-260107-1605-quic-client-phase04.md  code-reviewer-260107-1957-phase05-network-protocol.md  code-reviewer-260109-0715-phase00-clean-slate-revert.md  code-reviewer-260109-0756-phase01-protocol-framing.md  code-reviewer-260109-0809-client-cleanup-sigwinch.md  code-reviewer-260109-0822-server-cleanup.md  code-reviewer-260109-0831-phase04-pty-pump.md  code-reviewer-260122-1023-vfs-phase1.md  debugger-260108-1406-raw-mode-space-key.md  debugger-260108-2333-first-keystroke-newline.md  debugger-260108-2338-eager-spawn-timing-issue.md  debugger-260108-2347-wait-for-prompt-critical-bugs.md  debugger-260108-2358-eager-spawn-delay.md  debugger-260109-0047-newline-root-cause.md  debugger-260109-0051-protocol-framing-bug.md  debugger-260109-0841-slow-connection-double-framing-bug.md  debugger-260109-0850-sending-stopped-by-peer.md  debugger-260109-2358-client-already-initialized.md  debugger-260109-number8-clear-terminal-input.md  debugger-260121-1506-ios-dyld-error.md  debugger-260121-1531-pods-runner-framework-missing.md  debugger-260122-1131-frb-code-generation-investigation.md  docs-manager-260107-1627-phase04-quic-client.md  docs-manager-260107-1709-phase04-completion.md  docs-manager-260122-1029-vfs-phase1-docs.md  fullstack-developer-260106-2209-rust-core.md  (+32 more)
scripts/: build-macos.sh  test-network.sh  verify-build.sh
(+66 files in other folders)
