[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Comacode Team"]
license = "MIT"
repository = "https://github.com/comacode/comacode"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }
# Networking
quinn = "0.11"
rustls = "0.23"
# FFI
flutter_rust_bridge = "2.4"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Terminal
portable-pty = "0.8"
# Security (Phase E03)
governor = { version = "0.6", features = ["std"] }
rand = "0.8"
nonzero_ext = "0.3"
# Certificate & QR (Phase E04)
dirs = "5.0"
qrcode = "0.14"
sha2 = "0.10"
serde_json = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
panic = "abort"     # Abort on panic for smaller binary

[profile.dev]
opt-level = 0
debug = true
