[package]
name = "hostagent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hostagent"
path = "src/main.rs"

[dependencies]
# Core shared logic
comacode-core = { path = "../core" }
# Workspace dependencies
tokio = { workspace = true, features = ["sync", "full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Terminal (not available on iOS)
portable-pty = { workspace = true, optional = true }
# Bytes for zero-copy
bytes = "1.8"
# QUIC networking
quinn = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
# mDNS
mdns-sd = "0.11"
# CLI
clap = { version = "4.5", features = ["derive"] }
# Security (Phase E03)
governor = { workspace = true }
nonzero_ext = { workspace = true }
# Certificate & QR (Phase E04)
dirs = { workspace = true }
sha2 = { workspace = true }
# Web UI (Level 2)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
qrcode-generator = "4.1"
open = "5.0"
serde = { workspace = true }
serde_json = { workspace = true }
async-stream = "0.3"
futures = "0.3"
# PTY Adapter (Phase 05.1)
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
# File watching (Phase VFS-3)
notify = "7.0"

[features]
default = ["pty"]
pty = ["portable-pty"]
